
It is generally recommended to run B<inncheck> after any changes done to
configuration files, especially with the new improved version of this script
shipped with S<INN 2.5.3>, thanks to the hard work of Florian Schlichting
who added support for the syntax of F<incoming.conf>, F<innfeed.conf>,
F<readers.conf> and F<storage.conf>.

=over 2

=item *

When HDR/XHDR/XPAT was used on a new article coming into a newsgroup,
requesting a header not present in the overview database, the first
subsequent OVER/XOVER command did not show that article.  A remap of the
overview data file was missing in B<nnrpd>.  Thanks to Sam Varshavchik
for the bug report.

=item *

When a header field appeared more than once in an article, it was missing
from the overview data.  OVER/XOVER, as well as HDR/XHDR/XPAT using the
overview, were therefore returning an empty field.  The content of the
first occurrence is now returned, in accordance with S<RFC 3977>.

Perl and Python filters for B<innd> now also properly initialize their
headers variables with the first occurrence of header fields.  (It is
still the last occurrence for the Perl filter for B<nnrpd>.)

=item *

Fixed a possible plaintext command injection during the negotiation of a
TLS layer.  The vulnerability detailed in CVE-2011-0411 affects the STARTTLS
and AUTHINFO SASL commands.  B<nnrpd> now resets its read buffer upon a
successful negotiation of a TLS layer.  It prevents malicious commands, sent
unencrypted, from being executed in the new encrypted state of the session.

=item *

It is now possible to properly generate daily statistics with B<sendinpaths>
thanks to the new B<-k> and B<-r> flags that permit to control the interval
of days for processing dump files.  The new B<-c> flag permits to send a
copy of the generated e-mail to the newsmaster.

Also fixed an issue with statistics that could be missing or duplicated
for a couple of days when monthly sent.
